tests/paczka1/small_fuzzy/35193739.err
Error in line 7: S724 S356 21,0
Error in line 10: koKcEU6XCf S356 47,9
Error in line 15: koKcEU6XCf S741 70,3
